crates/openracing-hid-common/tests/snapshots/snapshot_expansion_tests__hid_device_info_default.snap
---
source: crates/openracing-hid-common/tests/snapshot_expansion_tests.rs
expression: "HidDeviceInfo::default()"
---
HidDeviceInfo {
    vendor_id: 0,
    product_id: 0,
    serial_number: None,
    manufacturer: None,
    product_name: None,
    path: "",
}
