crates/openracing-hid-common/tests/snapshots/snapshot_expansion_tests__hid_device_info_display_name_manufacturer.snap
---
source: crates/openracing-hid-common/tests/snapshot_expansion_tests.rs
expression: info.display_name()
---
Fanatec
