crates/openracing-hid-common/tests/snapshots/snapshot_expansion_tests__hid_device_info_full.snap
---
source: crates/openracing-hid-common/tests/snapshot_expansion_tests.rs
expression: info
---
HidDeviceInfo {
    vendor_id: 13422,
    product_id: 5,
    serial_number: Some(
        "MZ-2024-001",
    ),
    manufacturer: Some(
        "MOZA Racing",
    ),
    product_name: Some(
        "MOZA R9 V2",
    ),
    path: "\\\\.\\HID#VID_346E",
}
